Lab_11_Exposing_Services_with_Routes/load-balanced-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: load-balanced-webapp
  namespace: route-lab
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: "true"
spec:
  to:
    kind: Service
    name: webapp1
    weight: 100
  port:
    targetPort: 8080
