Lab_11_Exposing_Services_with_Routes/secure-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: secure-webapp
  namespace: route-lab
spec:
  to:
    kind: Service
    name: webapp1
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
